Remove unwanted file, update readme, tweak set initialisation
Signed-off-by: James Melville <jamesmelville@gmail.com>